--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "mongoose": "^8.8.2",
     "next": "15.0.3",
     "pusher": "^5.2.0",
@@ -18,6 +19,7 @@
     "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
